@@ -35,6 +35,7 @@ The following bugs are resolved with this release:
   [26383] bind_textdomain_codeset doesn't accept //TRANSLIT anymore
   [26923] Assertion failure in iconv when converting invalid UCS4 (CVE-2020-29562)
   [26932] libc: sh: Multiple floating point functions defined as stubs only
+  [27130] "rep movsb" performance issue
 
 Security related changes:
 
